--- a/app/index.html
+++ b/app/index.html
@@ -96,8 +96,8 @@
                      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                      aliqua.</div>
                   <div class="main-screen__information-btn-inner">
-                     <button class="btn">Learn more</button>
-                     <button class="btn">Start now</button>
+                     <button class="btn pop-up-link" data-article="">Learn more</button>
+                     <button class="btn pop-up-link" data-article="">Start now</button>
                   </div>
                </div>
             </div>
@@ -129,7 +129,8 @@
                            Leo in vitae turpis massa
                            sed elementum.
                         </div>
-                        <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                        <div class="card__link-box"><a href="" class="card__link-item pop-up-link" data-article="">View
+                              More</a></div>
                      </div>
                   </div>
                   <div class="services__card card orange">
@@ -139,7 +140,7 @@
                               <use xlink: href="#arrow-rotate"></use>
                            </svg>
                         </div>
-                        <div class="card__title">Recycling</div>
+                        <div class="card__title title-card">Recycling</div>
                         <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
                            dolore tumber tur adipisicing elit. Lorem ipsum dolor
                            amet, consecte tempor incididunt ut labore et dolore tumber tur adipisicing elit. Lorem ipsum
@@ -147,7 +148,8 @@
                            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                            aliqua.
                         </div>
-                        <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                        <div class="card__link-box"><a href="#" class="card__link-item pop-up-link" data-article="">View
+                              More</a></div>
                      </div>
                   </div>
                   <div class="services__card card purple">
@@ -157,7 +159,7 @@
                               <use xlink: href="#gallery"></use>
                            </svg>
                         </div>
-                        <div class="card__title">Computer Repair</div>
+                        <div class="card__title title-card">Computer Repair</div>
                         <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
                            dolore tumber tur adipisicing elit.
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -166,7 +168,8 @@
                            neque viverra justo. Leo in
                            vitae turpis massa sed elementum.
                         </div>
-                        <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                        <div class="card__link-box"><a href="#" class="card__link-item pop-up-link" data-article="">View
+                              More</a></div>
                      </div>
                   </div>
                   <div class="services__card card more-blue">
@@ -176,13 +179,14 @@
                               <use xlink: href="#finger-up"></use>
                            </svg>
                         </div>
-                        <div class="card__title">Smartphone Repair</div>
+                        <div class="card__title title-card">Smartphone Repair</div>
                         <div class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                            eiusmod tempor incididunt ut labore et dolore magna
                            aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna
                            neque viverra justo. Leo in
                            vitae turpis massa sed elementum.</div>
-                        <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                        <div class="card__link-box"><a href="" class="card__link-item pop-up-link"
+                              data-article="SmartphoneRepair">View More</a></div>
                      </div>
                   </div>
                </div>
@@ -286,7 +290,7 @@
                         fifteen years' experience repairing gadgets, we are confident that we can fix your devices.
                      </div>
                      <div class="info__btn-inner">
-                        <button class="btn">Learn more</button>
+                        <button class="btn pop-up-link" data-article="">Learn more</button>
                      </div>
                   </div>
                </div>
@@ -305,49 +309,63 @@
                         <li class="logo__image-item"><img src="images/abibas-logo.png" alt=""></li>
                         <li class="logo__image-item"><img src="images/T-logo.png" alt=""></li>
                      </ul>
-                     <div class="our-clients__link-box subtitle"><a href="#" class="our-clients__link">See more</a>
-                        <div class="articles">
-                           <div class="articles__inner">
-                              <div class="articles__burger">
-                                 <span></span>
-                                 <span></span>
-                              </div>
-                              <div class="articles__title">Smartphones Repair</div>
-                              <div class="articles__opinions-inner">
-                                 <div class="opinion__inner">
-                                    <p class="opinion__title">Broken Screens</p>
-                                    <p class="opinion__articles">Lorem ipsum dolor sit amet, consectetur adipisicing
-                                       elit. Iusto voluptates dolorem, odit enim! Aspernatur quos ipsa,
-                                       sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta
-                                       voluptate repellendus distinctio laborum at!</p>
-                                 </div>
-                                 <div class="opinion__inner">
-                                    <p class="opinion__title">Liquid Damage</p>
-                                    <p class="opinion__articles">Lorem ipsum dolor sit amet, consectetur adipisicing
-                                       elit. Iusto voluptates dolorem, odit enim! Aspernatur quos ipsa,
-                                       sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta
-                                       voluptate repellendus distinctio laborum at!</p>
-                                 </div>
-                                 <div class="opinion__inner">
-                                    <p class="opinion__title">Camera Replacement</p>
-                                    <p class="opinion__articles">
-                                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto voluptates
-                                       dolorem, odit enim! Aspernatur quos ipsa,
-                                       sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta
-                                       voluptate repellendus distinctio laborum at!
-                                    </p>
-                                 </div>
-                                 <div class="opinion__inner">
-                                    <p class="opinion__title">Not charging</p>
-                                    <p class="opinion__articles">
-                                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto voluptates
-                                       dolorem, odit enim! Aspernatur quos ipsa,
-                                       sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta
-                                       voluptate repellendus distinctio laborum at!
-                                    </p>
-                                 </div>
-                              </div>
-                           </div>
+                     <div class="our-clients__link-box subtitle"><a href="#" class="our-clients__link pop-up-link"
+                           data-article="">See more</a>
+                     </div>
+                  </div>
+               </div>
+            </section>
+            <section class="same-day-repairs">
+               <div class="same-day-repairs__inner">
+                  <div class="same-day-repairs__image">
+                     <img src="images/same-day-repairs.jpg" alt="">
+                  </div>
+                  <div class="same-day-repairs__info info">
+                     <div class="info__title title">Same Day Repairs</div>
+                     <div class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore agna
+                        aliqua.
+                     </div>
+                     <div class="card__link-box subtitle"><a href="" class="card__link-item pop-up-link"
+                           data-article="">Start your repair</a>
+                     </div>
+                  </div>
+               </div>
+            </section>
+            <section class="decor">
+               <div class="decor__inner">
+                  <div class="decor__item"><img src="images/decor-left-img.jpg" alt=""></div>
+                  <div class="decor__item"><img src="images/decor-center-img.jpg" alt=""></div>
+                  <div class="decor__item"><img src="images/decor-right-img.jpg" alt=""></div>
+               </div>
+            </section>
+            <section class="iphone-repairs">
+               <div class="container">
+                  <div class="iphone-repairs__inner">
+                     <div class="iphone-repairs__top">
+                        <div class="iphone-repairs__title title-card">iPhone Repair</div>
+                        <div class="iphone-repairs__icon">
+                           <svg class="arrow-down">
+                              <use xlink: href="#arrow-down"></use>
+                           </svg>
+                        </div>
+                     </div>
+                     <div class="iphone-repairs__opinions-inner">
+                        <div class="opinion__inner">
+                           <p class="opinion__title">Broken Screens</p>
+                           <p class="opinion__articles">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto
+                              voluptates dolorem, odit enim! Aspernatur quos ipsa,
+                              sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta voluptate
+                              repellendus distinctio laborum at!</p>
+                        </div>
+                        <div class="opinion__inner">
+                           <p class="opinion__title">Not charging</p>
+                           <p class="opinion__articles">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto
+                              voluptates dolorem, odit enim!
+                              Aspernatur quos ipsa,
+                              sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta voluptate
+                              repellendus
+                              distinctio laborum at!</p>
                         </div>
                      </div>
                   </div>
@@ -366,6 +384,8 @@
    <script src="js/select.js"></script>
    <script src="js/BurgerNavigation.js"></script>
    <script src="js/swiper-bundle.min.js"></script>
+   <script src="js/ArticlesLibrary.js"></script>
+   
    <script src="js/main.js"></script>
 </body>
 
