--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
                               <use xlink: href="#pencil-write"></use>
                            </svg></div>
                         <div class="card__title title-card">Warranty</div>
-                        <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
+                        <div class="card__description subtitle">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
                            dolore tumber tur adipisicing elit. Lorem ipsum dolor
                            sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                            magna aliqua. Amet mauris
@@ -141,7 +141,7 @@
                            </svg>
                         </div>
                         <div class="card__title title-card">Recycling</div>
-                        <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
+                        <div class="card__description subtitle">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
                            dolore tumber tur adipisicing elit. Lorem ipsum dolor
                            amet, consecte tempor incididunt ut labore et dolore tumber tur adipisicing elit. Lorem ipsum
                            dolor sit amet,
@@ -160,7 +160,7 @@
                            </svg>
                         </div>
                         <div class="card__title title-card">Computer Repair</div>
-                        <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
+                        <div class="card__description subtitle">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
                            dolore tumber tur adipisicing elit.
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                            labore et dolore magna
@@ -180,7 +180,7 @@
                            </svg>
                         </div>
                         <div class="card__title title-card">Smartphone Repair</div>
-                        <div class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        <div class="card__description subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                            eiusmod tempor incididunt ut labore et dolore magna
                            aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna
                            neque viverra justo. Leo in
@@ -350,7 +350,7 @@
                            </svg>
                         </div>
                      </div>
-                     <div class="iphone-repairs__opinions-inner">
+                     <div class="iphone-repairs__opinions-inner subtitle">
                         <div class="opinion__inner">
                            <p class="opinion__title">Broken Screens</p>
                            <p class="opinion__articles">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto
@@ -371,11 +371,64 @@
                   </div>
                </div>
             </section>
+            <section class="form">
+               <div class="container">
+                  <form class="form__inner" action="#">
+                     <div class="title">Get in touch and let us help!</div>
+                     <div class="form__item subtitle">
+                        <label>Your Name<input type="text" name="name" class="form__name-input subtitle" autocomplete="off" placeholder="Name"></label>
+                     </div>
+                     <div class="form__item subtitle">
+                        <label>Your E-mail<input type="email" name="email" class="form__email-input subtitle" autocomplete="off" placeholder="E-mail"></label>
+                     </div>
+                     <div class="form__btn-inner">
+                        <button class="btn pop-up-link" type="submit"
+                        data-article="">Check Claim</button>
+                     </div>
+                  </form>
+               </div>
+            </section>
          </div>
          <footer class="footer">
             <div class="container" data-section="move">
-               <div class="footer__row">
-
+               <div class="footer__inner">
+                  <div class="footer__title title-card">ClaimM4</div>
+                  <div class="footer__inform-inner inform-footer subtitle-footer">
+                     <ul class="inform-footer__inner-contacts contacts">
+                        <li class="contacts__item active-number"><address class= "contacts__item-link">1234 Oak St.</address></li>
+                        <li class="contacts__item"><a class= "contacts__item-link"href="mailto:contact@yoursite.com">contact@yoursite.com</a></li>
+                        <li class="contacts__item"><a class= "contacts__item-link"href="tel:+13324653345">+13 324 653 345</a></li>
+                        <li class="contacts__item active-number"><a class= "contacts__item-link"href="tel:+13324653346">+13 324 653 346</a></li>
+                        <li class="contacts__item active-number"><a class= "contacts__item-link"href="tel:+13324653347">+13 324 653 347</a></li>
+                     </ul>
+                     <div class="inform-footer__menu-inner footer-menu">
+                        <div class="footer-menu__inner">
+                           <ul>
+                              <li class="footer-menu__item"><a href="#" class="">Support</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">Chat</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">Contact us</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">FAQs</a></li>
+                           </ul>
+                          <ul>
+                              <li class="footer-menu__item"><a href="#" class="">Links</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">Blog</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">Help</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">Contacts</a></li>
+                          </ul>
+                           <ul>
+                              <li class="footer-menu__item"><a href="#" class="">About company</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">History</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">About us</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">Vacancies</a></li>
+                              <li class="footer-menu__item"><a href="#" class="">Our mission</a></li>
+                           </ul>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="footer__bottom-inner footer-bottom subtitle-footer">
+                     <div class="footer-bottom__textl">Privacy Notice</div>
+                     <div class="footer-bottom__textr">ClaimM4</div>
+                  </div>
                </div>
             </div>
          </footer>
@@ -385,7 +438,6 @@
    <script src="js/BurgerNavigation.js"></script>
    <script src="js/swiper-bundle.min.js"></script>
    <script src="js/ArticlesLibrary.js"></script>
-   
    <script src="js/main.js"></script>
 </body>
 
